# project-cube

./: project-cube.cabal
src/Language/: Lambda.hs
src/Language/Lambda/: Parser.hs  Term.hs
src/Language/Lambda/Parser/: Lexer.hs
src/Language/Lambda/Type/: Checker.hs
test/: Test.hs
